# join_per_sample_vcfs

./: .containerignore  .gitignore  Cargo.toml  Containerfile  LICENSE  PROJECT_STATUS.md  README.md  genotype_joining_specification.md  genotype_merge_specification.md  genotype_merge_specification.txt  review_to_do.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
ai/skills/: code_review_skill.md
benches/: baq_perf.rs  cohort_e2e_perf.rs  cohort_perf.rs  cohort_var_calling_perf.rs  freebayes_bookkeeping.rs  gvcf_perf.rs  paralog_scoring_perf.rs  pileup_walker_scaling.rs  psp_reader_perf.rs  psp_writer_perf.rs  ssr_pileup_perf.rs  var_calling_perf.rs
benchmarks/giab/: README.md
benchmarks/human_genome_bottle/: HG002_bench_azar_merged_1000.bed  bench.config.sh
benchmarks/lib/: README.md  common.sh  compare_to_truth.sh  comparison_dashboard.py  prepare_reference.sh  qual_depth_dashboard.py  run_depth_sweep.sh  run_freebayes.sh  run_gatk.sh  run_hipstr.sh  run_ours.sh  run_ours_ssr.sh  ssr_concordance.py  ssr_concordance_dashboard.py
benchmarks/ssr_hg002/: README.txt
benchmarks/ssr_tomato1/: bench.config.sh  ssr_regions.bed
benchmarks/tomato1/: bench.config.sh  regions.bed  regions.tsv  regions_n160_200kb.bed  regions_n160_200kb.tsv
doc/devel/: TODO.txt
doc/help/: architecture-mermaid.html  architecture.html
doc/reports/: ai_programming_experience_jun_2026.md  cost_estimate_first_working_version.md  project_history.md  workshop_ai_fast_coding_idea_testing.md
examples/: blocksize_rewrite.rs  dhat_baq.rs  dhat_ng_merge.rs  dhat_paralog.rs  dhat_pileup.rs  dhat_psp_reader.rs  dhat_psp_writer.rs  dhat_var_calling.rs  diag_reader_compare.rs  dump_sample_summary.rs  het_baseline.rs  ng_normalizer_screen.rs  ng_ssr_loci_dump.rs  ng_synthesize_stress_reads.rs  paralog_fit_probe.rs  paralog_score_parity.rs  profile_cohort_e2e.rs  profile_posterior_engine.rs  profile_ssr_pileup.rs  psp_block_stats.rs  psp_rechunk.rs  ssr_delimiter_comparison.rs  ssr_psp_dump.rs  ssr_psp_seqdump.rs  ssr_slip_dump.rs  tomato2_sigma0.rs
feature_implementation_plans/: genotype_joining.md  snp_calling_from_bam.md
ia/feature_implementation_plans/: baq.md  per_sample_caller_cram_input.md  pileup_freebayes_style_benchmark.md  pileup_lazy_cigar.md  pileup_pull_iterator.md  snp_calling_from_bam.md
ia/reviews/: baq_2026-05-12.md  fixes_applied_2026-05-01.md  fixes_applied_2026-05-06.md  fixes_applied_2026-05-11.md  fixes_applied_2026-05-12.md  fixes_applied_2026-05-13.md  fixes_applied_2026-05-13_v2.md  fixes_applied_psp_reader_2026-05-13.md  perf_baq_2026-05-12.md  perf_pileup_2026-05-12.md  perf_pileup_2026-05-12_results.md  perf_psp_reader_2026-05-13.md  pileup_2026-05-09.md  pileup_2026-05-11.md  pileup_freebayes_comparison_2026-05-08.md  pileup_gatk_comparison_2026-05-08.md  pileup_samtools_comparison_2026-05-07.md
ia/skills/: code_review_fixes.md  code_review_skill.md  feature_implementation_skill.md  performance_review_skill.md
ia/specs/: buffered_peekable.md  calling_pipeline_architecture.md  design_principles.md  development_order.md  freebayes_posterior_gt_probs.md  gatk_vs_freebayes_comparison.md  general_project_specification.md  per_sample_caller.md  per_sample_pileup_format.md  phase_chain.md  pileup_walker.md  posterior_gt_probs.md
proptest-regressions/var_calling/: posterior_engine.txt
python_draft/: main.py  pyproject.toml  test_group_analyzer.py  variant_group.py  variant_group_analyzer.py
research/: ng_typed_regions_census.py
reviews/: cohort_2026-05-16.md  fixes_applied_2026-04-14.md  fixes_applied_2026-05-16.md  gvcf_parser_2026-04-13.md  per-position-merger_2026-05-15.md
scripts/: claude.sh  container-entrypoint.sh  dev.sh  precommit-check.sh  rebuild-image.sh
skills/: code_review_fixes.md
specs/: code_review_skill.md  development_order.md  general_project_specification.md  information_about_the_problem_to_solve.md
src/: buffered_peekable.rs  decompression_pool.rs  error_render.rs  errors.rs  genetics.rs  genotype_merging.rs  genotype_posteriors.rs  gvcf_parser.rs  lib.rs  main.rs  main_exp.rs  norm_seqs.rs  pileup_record.rs  pipeline.rs  regions.rs  threaded_reader.rs  utils_magic.rs  variant_group.rs  variant_group_analaysis_pseudocode.txt  variant_group_analyzer.rs  variant_grouping.rs  vcf_writer.rs
src/bam/: alignment_input.rs  bam_input.rs  cram_input.rs  errors.rs  index_preflight.rs  mod.rs  segment_merge.rs  segment_reader.rs
src/baq/: errors.rs  mod.rs  probaln.rs  scratch.rs  tests.rs
src/cohort/: mod.rs  per_group_merger.rs  per_position_merger.rs  variant_grouping.rs
src/fasta/: fetcher.rs  mod.rs
src/iter_ext/: buffered_peekable.rs  mod.rs
src/ng/: mod.rs  raw_chrom_reader.rs  ref_seq.rs  reference_info.rs  scanner_parity.rs  tandem_repeat.rs  types.rs
src/paralog/: coverage_model.rs  inbreeding.rs  locus_score.rs  mod.rs  prior.rs
src/per_sample_caller/: cram_files.rs  cram_input.rs  errors.rs  mod.rs  pileup_to_psp.rs  record_specs.rs  ref_fetcher.rs
src/per_sample_pileup/: baq_engine.rs  baq_stream.rs  baq_tests.rs  cram_input.rs  errors.rs  mod.rs  pileup_to_psp.rs  record_specs.rs  ref_fetcher.rs
src/pileup/: mod.rs
src/pileup_record/: mod.rs
src/pop_var_caller/: batch_assignment.rs  cli.rs  cohort_driver.rs  common.rs  contamination_artefact.rs  contamination_artifact.rs  contamination_chunked_stream.rs  estimate_contamination.rs  mod.rs  psp_to_pileup.rs  ssr_call.rs  ssr_catalog.rs  ssr_pileup.rs  stage1_pipeline.rs  var_calling.rs  var_calling_from_bam.rs
src/pop_var_caller_exp/: cli.rs  mod.rs  typed_regions.rs
src/psp/: block.rs  errors.rs  header.rs  (+9 more)
tests/: cohort_cli_integration.rs  cohort_vcf_writer_integration.rs  contamination_estimation_integration.rs  genotype_merging_test.rs  gvcf_parser_test.rs  integration_test.rs  pileup_cli_integration.rs  posterior_engine_integration.rs  psp_to_pileup_integration.rs  thread_budget_integration.rs  utils_magic_test.rs  var_calling_new_oracle.rs  variant_group_analyzer_test.rs  variant_group_test.rs  vcf_writer_integration_test.rs
(+857 files in other folders)
