[package]
name = "merge_per_sample_vcfs"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
bytemuck = "1"
dhat = { version = "0.3", optional = true }
mimalloc = { version = "0.1", default-features = false, optional = true }
flate2 = "1.1.9"
lru = "0.16.3"
noodles-core = "0.19.0"
noodles-cram = "0.92.0"
noodles-fasta = "0.60.0"
noodles-sam = "0.84.0"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
smallvec = "1.13"
tempfile = "3"
thiserror = "2.0.18"
toml = "1.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13"

[features]
# Enable in `cargo run --example dhat_pileup --features dhat-heap` to swap
# the global allocator for `dhat::Alloc` and produce `dhat-heap.json`.
# Off by default so production builds carry no dhat code.
dhat-heap = ["dep:dhat"]
# Enable in `cargo bench --features alloc-mimalloc --bench psp_writer_perf`
# (or any other bench / example) to swap the global allocator for
# `mimalloc`. Off by default so production binaries pick the system
# allocator. The mutex exclusion with `dhat-heap` is enforced at the
# `#[global_allocator]` declaration in each bench / example shim —
# enabling both at once is a compile error there.
alloc-mimalloc = ["dep:mimalloc"]

[dev-dependencies]
bstr = "1"
criterion = "0.8.2"

[[bench]]
name = "gvcf_perf"
harness = false

[[bench]]
name = "pileup_walker_scaling"
harness = false

[[bench]]
name = "freebayes_bookkeeping"
harness = false

[[bench]]
name = "baq_perf"
harness = false

[[bench]]
name = "psp_writer_perf"
harness = false
