[package]
name = "pop_var_caller"
version = "0.1.0"
edition = "2024"
license = "MIT"
# Mi22: edition 2024 requires ≥ 1.85; the `let-chains` features
# (e.g. `if let ... && ...` in header.rs) are stable since 1.88, so
# 1.88 is the practical floor. `rust-toolchain.toml` pins 1.95 for
# benchmark reproducibility — see its comment.
rust-version = "1.88"

[lints.rust]
# Mi23: pin the unsafe-free policy via the lint table so editor LSPs
# and CI builds see the same stance. `src/lib.rs` also carries
# `#![forbid(unsafe_code)]` for redundancy.
unsafe_code = "forbid"

[lints.rustdoc]
# Doc warnings escalate to errors so a broken intra-doc link can't
# silently land.
broken_intra_doc_links = "deny"
# Several `pub(crate)` types (e.g. `IngestState`, `WriterScratch`,
# `ColumnPayload`) appear in doc comments on public items but are
# not re-exported. Allow the lint — the crate is internal-only.
private_intra_doc_links = "allow"

[lints.clippy]
# Mi23: keep the lints table small and additive. `wildcard_enum_match_arm`
# and `match_same_arms` would surface many pre-existing non-PSP
# sites. Re-enable when those modules get their own clippy pass.
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
# cohort_block review M4 (Wave 3): `ChunkDriverError` carries `PathBuf`
# + operation-context fields + a nested `VcfWriteError` / `PspReadError`
# per variant so the operator-facing message names *what* the driver
# was doing when the error fired (review §M4). The result is an
# `Err`-arm wider than clippy's default 128-byte threshold; the
# alternative is wrapping every typed-error inner field in `Box<…>`,
# which pays a heap allocation per error and breaks the `#[source]`
# chain anyhow-style rendering. Allow this lint cohort-wide — the
# cost lives only on error paths and the diagnostic value is the
# whole point.
result_large_err = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.102"
# bytemuck: zero-copy `cast_slice` in PSP's `encode_list_column_csr`
# fast path (src/psp/block.rs). Avoids user-side `unsafe`; single
# dependent call site.
bytemuck = "1"
clap = { version = "4", features = ["derive"] }
dhat = { version = "0.3", optional = true }
md-5 = "0.11"
mimalloc = { version = "0.1", default-features = false, optional = true }
# noodles-bam and noodles-csi are promoted from transitive (via
# noodles-cram / noodles-sam) to explicit so the BAM/CSI symbols
# used by src/bam/* are compile-checked against the manifest
# directly rather than relying on noodles-cram's re-export
# surface (which can shrink at any minor bump).
noodles-bam = "0.89.0"
noodles-bgzf = "0.47.0"
noodles-core = "0.20.0"
noodles-cram = "0.93.0"
noodles-csi = "0.56.0"
noodles-fasta = "0.61.0"
noodles-sam = "0.85.0"
noodles-vcf = "0.88.0"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
smallvec = "1.13"
tempfile = "3"
thiserror = "2.0.18"
toml = "1.1"
# `wide`: portable SIMD primitives — AVX2 on x86_64 (production
# server), NEON on aarch64 (Apple Silicon dev laptop). Single
# source for both ISAs. Used by posterior_engine::simd for the
# lane-parallel ln/exp tables.
wide = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13"

[features]
# Enable in `cargo run --example dhat_pileup --features dhat-heap` to swap
# the global allocator for `dhat::Alloc` and produce `dhat-heap.json`.
# Off by default so production builds carry no dhat code.
dhat-heap = ["dep:dhat"]
# Enable in `cargo bench --features alloc-mimalloc --bench psp_writer_perf`
# (or any other bench / example) to swap the global allocator for
# `mimalloc`. Off by default so production binaries pick the system
# allocator. The mutex exclusion with `dhat-heap` is enforced at the
# `#[global_allocator]` declaration in each bench / example shim —
# enabling both at once is a compile error there.
alloc-mimalloc = ["dep:mimalloc"]

[dev-dependencies]
bstr = "1"
criterion = "0.8.2"
proptest = "1"
serial_test = "3"

[[bin]]
name = "pop_var_caller"
path = "src/main.rs"

[[bench]]
name = "pileup_walker_scaling"
harness = false

[[bench]]
name = "freebayes_bookkeeping"
harness = false

[[bench]]
name = "baq_perf"
harness = false

[[bench]]
name = "psp_writer_perf"
harness = false

[[bench]]
name = "psp_reader_perf"
harness = false

[[bench]]
name = "var_calling_perf"
harness = false

[[bench]]
name = "cohort_e2e_perf"
harness = false
